--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.4"
   }
 }
